[gd_scene load_steps=33 format=3 uid="uid://evt8muun81pf"]

[ext_resource type="Script" path="res://Scripts/persongem_2.gd" id="1_s48xg"]
[ext_resource type="Texture2D" uid="uid://c2ruagv1cx8u6" path="res://Assets/Characters(100x100)/Archer/Archer with shadows/Archer-Idle.png" id="2_2q8a2"]
[ext_resource type="Texture2D" uid="uid://coxa5wkxkrcki" path="res://ui/UI/RectangleBox_96x96.png" id="3_7tkgo"]
[ext_resource type="Theme" uid="uid://djhcai4p6n8i1" path="res://Assets/tema_butaoha.tres" id="3_x2v8i"]
[ext_resource type="Texture2D" uid="uid://d1w2coi1kgw6j" path="res://ui/UI/Button_52x14.png" id="4_y33s0"]
[ext_resource type="Texture2D" uid="uid://c4fpy0rwx2gcl" path="res://ui/UI/QuitIcon.png" id="5_6o56b"]
[ext_resource type="Texture2D" uid="uid://qi7je4g33bvc" path="res://ui/UI/TitleBox_64x16.png" id="6_21e7l"]
[ext_resource type="Texture2D" uid="uid://bmu78duf5lhgq" path="res://ui/UI/BlackBigCircleBoxWithBorder_27x27.png" id="7_ywqie"]
[ext_resource type="Texture2D" uid="uid://bygck5p5e7fqh" path="res://Assets/Assets/[4] Full Spritesheet.png" id="8_lif7l"]
[ext_resource type="Texture2D" uid="uid://dmh573k8gu1r0" path="res://ui/UI/CharacterBox_56x57.png" id="10_80u0w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3bwv3"]
atlas = ExtResource("2_2q8a2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghxfl"]
atlas = ExtResource("2_2q8a2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p7a1"]
atlas = ExtResource("2_2q8a2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vigj7"]
atlas = ExtResource("2_2q8a2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x7ah"]
atlas = ExtResource("2_2q8a2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlxyf"]
atlas = ExtResource("2_2q8a2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_n780a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bwv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghxfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p7a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vigj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x7ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlxyf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5ulj"]
size = Vector2(29, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfo3p"]
atlas = ExtResource("8_lif7l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7oxf"]
atlas = ExtResource("8_lif7l")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mdpb"]
atlas = ExtResource("8_lif7l")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3sar"]
atlas = ExtResource("8_lif7l")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjh62"]
atlas = ExtResource("8_lif7l")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqgc6"]
atlas = ExtResource("8_lif7l")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tb20k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfo3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7oxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3sar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjh62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqgc6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2neab"]
atlas = ExtResource("2_2q8a2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_edjiy"]
atlas = ExtResource("2_2q8a2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtpei"]
atlas = ExtResource("2_2q8a2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwvut"]
atlas = ExtResource("2_2q8a2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_guh2y"]
atlas = ExtResource("2_2q8a2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsboq"]
atlas = ExtResource("2_2q8a2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_dd04r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2neab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edjiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtpei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwvut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guh2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsboq")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="persongem_2" type="Node2D"]
script = ExtResource("1_s48xg")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_n780a")
autoplay = "default"
frame_progress = 0.930117

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_w5ulj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_x2v8i")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.565)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -243.0
offset_right = 424.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7tkgo")

[node name="box_name" type="TextureRect" parent="CanvasLayer/Control/ColorRect/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -180.0
offset_right = -36.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_y33s0")

[node name="title" type="Label" parent="CanvasLayer/Control/ColorRect/TextureRect/box_name"]
layout_mode = 0
offset_left = 84.0
offset_top = 26.0
offset_right = 212.0
offset_bottom = 49.0
text = "Arqueiro
"

[node name="exit" type="TextureButton" parent="CanvasLayer/Control/ColorRect/TextureRect"]
layout_mode = 0
offset_left = 700.0
offset_top = 48.0
offset_right = 721.0
offset_bottom = 69.0
scale = Vector2(2.67174, 2.81077)
texture_normal = ExtResource("5_6o56b")

[node name="comprar" type="Button" parent="CanvasLayer/Control/ColorRect/TextureRect"]
layout_mode = 0
offset_left = 164.0
offset_top = 211.0
offset_right = 391.0
offset_bottom = 264.0
text = "Comprar por 100"
flat = true

[node name="sprit_coins" type="AnimatedSprite2D" parent="CanvasLayer/Control/ColorRect/TextureRect/comprar"]
position = Vector2(199, 24)
sprite_frames = SubResource("SpriteFrames_tb20k")
autoplay = "default"

[node name="selecionar" type="Button" parent="CanvasLayer/Control/ColorRect/TextureRect"]
layout_mode = 0
offset_left = 457.0
offset_top = 211.0
offset_right = 684.0
offset_bottom = 264.0
text = "Selecionar
"
flat = true

[node name="box_coins" type="TextureRect" parent="CanvasLayer/Control/ColorRect/TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -496.0
offset_right = 75.0
offset_bottom = -430.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_21e7l")

[node name="sprit_coins" type="AnimatedSprite2D" parent="CanvasLayer/Control/ColorRect/TextureRect/box_coins"]
position = Vector2(49, 33)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_tb20k")
autoplay = "default"

[node name="label_coins" type="Label" parent="CanvasLayer/Control/ColorRect/TextureRect/box_coins"]
layout_mode = 0
offset_left = 69.0
offset_top = 26.0
offset_right = 133.0
offset_bottom = 49.0
text = "00"

[node name="box_icon" type="TextureRect" parent="CanvasLayer/Control/ColorRect/TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -190.0
offset_right = -245.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ywqie")

[node name="icon" type="AnimatedSprite2D" parent="CanvasLayer/Control/ColorRect/TextureRect/box_icon"]
position = Vector2(42, 48)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_dd04r")
autoplay = "default"
frame_progress = 0.400236

[node name="box_melhorias" type="TextureRect" parent="CanvasLayer/Control/ColorRect/TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = 32.0
offset_right = 272.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_80u0w")

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/TextureRect/box_melhorias"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 392.0
offset_bottom = 119.0
text = "descri√ßao: 
Especialista em arco e flecha,
o arqueiro combina agilidade e 
mira impec√°vel para enfrentar 
qualquer desafio"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/TextureRect/comprar" to="." method="_on_comprar_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/TextureRect/selecionar" to="." method="_on_selecionar_pressed"]
